# JTAG_LAB

./: Cargo.toml  Dockerfile  README.md  basys3.cfg  lab.typ  part1.cfg
docs/: signals.typ  xadc.typ
resources/: top.bit
src/: jtag.rs  lab.rs  main.rs  units.rs  util.rs
src/io/: backend.rs  controller.rs  devices.rs  mod.rs
src/io/cables/: ftdi.rs
